Add start button and guide box with information

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bod Code Quiz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Button to start the Quiz -->
+    <div class="btn-start"><button>Click Here to Start Coding Quiz</button></div>
+
+    <div class="guide-box">
+        <div class="guide-title">
+            <span>A Quick Guide Before You Start</span>
+        </div>
+        <div class="guide-list">
+            <div class="guide">1: A coding question will be displayed and you are only allowed 15 seconds to choose an answer</div>
+            <div class="guide">2: Your question will be locked in so make sure you are certain with your answer!</div>
+            <div class="guide">3: Once completed, your score will be tallied up at the end!</div>
+        </div>
+    </div>
     
 </body>
 </html>
