--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bod Code Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Button to start the Quiz -->
@@ -16,9 +16,13 @@
             <span>A Quick Guide Before You Start</span>
         </div>
         <div class="guide-list">
-            <div class="guide">1: A coding question will be displayed and you are only allowed 15 seconds to choose an answer</div>
-            <div class="guide">2: Your question will be locked in so make sure you are certain with your answer!</div>
-            <div class="guide">3: Once completed, your score will be tallied up at the end!</div>
+            <div class="guide">1: A coding question will be displayed and you are only <span>allowed 5 seconds</span> to choose an answer.</div>
+            <div class="guide">2: Your question will be <span>locked in</span> so make sure you are <span>certain</span> with your answer!</div>
+            <div class="guide">3: Once completed, your score will be tallied up at <span>the end!</span></div>
+        </div>
+        <div class="buttons">
+            <button class="exit">Quit Game</button>
+            <button class="restart">Continue Game</button>
         </div>
     </div>
     
