Add game area with font awesome icon for game countdown

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bod Code Quiz</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/ed532fafaf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Button to start the Quiz -->
     <div class="btn-start"><button>Click Here to Start Coding Quiz</button></div>
-
+    <div class="game-area">
+        <header>
+            <div id="game-title">Bod's Coding Quiz</div>
+            <div id="time">
+                <div id="timer-icon"><i class="fa-regular fa-clock"></i> Remaining </div>
+                <div id="timer-count">5</div>
+            </div>
+        </header>
+        
+    </div>
     <div class="guide-box">
         <div class="guide-title">
             <span>A Quick Guide Before You Start</span>
