Add basic structure for question displays and placeholder answers and icons within HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,29 @@
                 <div id="timer-count">5</div>
             </div>
         </header>
-        
+        <section>
+            <div id="question-display">
+                <span>What is Javascript Used for?</span>
+            </div>
+            <div id="answer-select">
+                <div class="answer">
+                    <span>To create dynamic and interactive web content</span>
+                    <div class="correct-icon"><i class="fa-regular fa-circle-check"></i></div>
+                </div>
+                <div class="answer">
+                    <span>To style websites and change the appearance</span>
+                    <div class="incorrect-icon"><i class="fa-regular fa-circle-xmark"></i></div>
+                </div>
+                <div class="answer">
+                    <span>To create basic websites</span>
+                </div>
+                <div class="answer">
+                    <span>To view databases for websites</span>
+                </div>
+
+
+        </section>
+
     </div>
     <div class="guide-box">
         <div class="guide-title">
