--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="btn-start"><button>Click Here to Start Coding Quiz</button></div>
     <div class="game-area">
         <header>
-            <div id="game-title">Bod's Coding Quiz</div>
+            <div id="game-title">Bod's Pro Coding Quiz<i class="fa-solid fa-code"></i></div>
             <div id="time">
                 <div id="timer-icon"><i class="fa-regular fa-clock"></i> Remaining </div>
                 <div id="timer-count">5</div>
@@ -37,11 +37,15 @@
                 </div>
                 <div class="answer">
                     <span>To view databases for websites</span>
-                </div>
-
-
+            </div>
         </section>
 
+        <footer>
+            <div id="question-count">
+                <span><p>6</p>Out of<p>10</p></span>
+            </div>
+            <button id="next-q-button">Next</button>
+        </footer>
     </div>
     <div class="guide-box">
         <div class="guide-title">
@@ -55,6 +59,20 @@
         <div class="buttons">
             <button class="exit">Quit Game</button>
             <button class="restart">Continue Game</button>
+        </div>
+    </div>
+
+    <div id="final-score">
+        <div id="finish-icon">
+            <i class="fa-solid fa-flag-checkered"></i>
+        </div>
+        <div id="finish-title">You have finished the Quiz</div>
+        <div id="finish-result">
+            <span>You scored <p>6</p> out of <p>10</p></span>
+        </div>
+        <div class="buttons">
+            <button class="restart">Start Again?</button>
+            <button class="exit">Quit Game</button>
         </div>
     </div>
     
