Link js file in bottom of body in HTML file

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         </div>
     </div>
 
-    <div id="final-score">
+    <div class="final-score">
         <div id="finish-icon">
-            <i class="fa-solid fa-flag-checkered"></i>
+            <span><i class="fa-solid fa-cake-candles"></i></span><i class="fa-solid fa-flag-checkered"></i><span><i class="fa-solid fa-cake-candles"></i></span>
         </div>
         <div id="finish-title">You have finished the Quiz</div>
         <div id="finish-result">
@@ -76,5 +76,6 @@
         </div>
     </div>
     
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
