Link question data file in botton of body in HTML file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
         </header>
         <section>
+            <!-- Question display area -->
             <div id="question-display">
                 <span>What is Javascript Used for?</span>
             </div>
@@ -47,6 +48,7 @@
             <button id="next-q-button">Next</button>
         </footer>
     </div>
+    <!-- Guide area -->
     <div class="guide-box">
         <div class="guide-title">
             <span>A Quick Guide Before You Start</span>
@@ -61,7 +63,7 @@
             <button class="restart">Continue Game</button>
         </div>
     </div>
-
+    <!-- Final score area -->
     <div class="final-score">
         <div id="finish-icon">
             <span><i class="fa-solid fa-cake-candles"></i></span><i class="fa-solid fa-flag-checkered"></i><span><i class="fa-solid fa-cake-candles"></i></span>
@@ -77,5 +79,6 @@
     </div>
     
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/qdata.js"></script>
 </body>
 </html>
