Remove commented code that has been inserted in JS

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
         </div>
         <div id="finish-title">You have finished the Quiz</div>
         <div id="finish-result">
-            <span>You scored <p>6</p> out of <p>10</p></span>
         </div>
         <div class="buttons">
-            <button class="restart">Start Again?</button>
+            <button class="start-again">Start Again?</button>
             <button class="exit">Quit Game</button>
         </div>
     </div>
