Validated HTML code and removed section

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <div id="timer-count">5</div>
             </div>
         </header>
-        <section>
+        <div class="question-section">
             <!-- Question display area -->
             <div id="question-display">
             </div>
             <div id="answer-select">
             </div>
-        </section>
+        </div>
 
         <footer>
             <div class="progress-bar"></div>
