Add README content and documentation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <button class="exit">Quit Game</button>
         </div>
     </div>
-    <!-- script imports -->
+    <!-- Script imports -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/qdata.js"></script>
 </body>
